Fixed menu display bug on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,13 @@ html,body {
   transform: translateX(100%);
   transition: transform 0.4s;
 }
+
+@media (max-width: 980px) {
+  .cd-nav-container {
+    display: none;
+  }
+}
+
 .cd-nav-container.is-visible {
   transform: translateX(0);
 }
